--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: 'SocialMedia'
 version: '1'
 description: 'SocailMedia Links'
-author: 'BinIch_DSL'
+author: 'SorryItsLena'
 website: 'https://github.com/SLDCollective'
 main: 'com.github.sldcollective.Social'
 commands:
